c/examples/writing-a-c-compiler-tests/tests/chapter_11/valid/libraries/long_global_var.c
long int l = 8589934592l; // 2^33

long return_l(void) {
    return l;
}

int return_l_as_int(void) {
    return l;
}