c/examples/writing-a-c-compiler-tests/tests/chapter_11/invalid_types/conflicting_global_types.c
int foo = 3;

/* It's illegal to declare the same variable
 * with different types
 */
long foo;

int main(void) {
    return foo;
}